--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -41,7 +41,7 @@
             [routerLink]="['./user']"
             [relativeTo]="route"
             class="nav-link"
-            >USER</a
+            >EMPLOYEES</a
           >
         </li>
       </ul>
