--- a/src/app/modules/shelf/shelf/shelf.component.html
+++ b/src/app/modules/shelf/shelf/shelf.component.html
@@ -33,7 +33,7 @@
             >
             <span
               class="icon delete material-symbols-outlined"
-              (click)="deleteShelf(shelf.no)"
+              (click)="openDialog(shelf.no)"
               >delete</span
             >
           </div>
