--- a/src/app/shared/component/item-in-out-dialog/item-in-out-dialog.component.html
+++ b/src/app/shared/component/item-in-out-dialog/item-in-out-dialog.component.html
@@ -11,5 +11,7 @@
       [(ngModel)]="quantity"
     />
   </div>
-  <button class="btn btn-info mt-2" (click)="itemInOut()">Add shelf</button>
+  <button class="btn btn-info mt-2" (click)="itemInOut()">
+    {{ buttonName }}
+  </button>
 </div>
