--- a/src/app/modules/item/item/item.component.html
+++ b/src/app/modules/item/item/item.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <!-- <a class="btn btn-primary btn-nueva"><b>+</b> Add Shelf </a> -->
-  <button class="btn btn-primary" (click)="newItem()">NEW ITEM</button>
+  <button class="btn btn-primary mb-3" (click)="newItem()">NEW ITEM</button>
   <table class="table table-bordered table-hover">
     <thead>
       <tr>
