--- a/src/app/modules/shelf/shelf/shelf.component.html
+++ b/src/app/modules/shelf/shelf/shelf.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <!-- <a class="btn btn-primary btn-nueva"><b>+</b> Add Shelf </a> -->
-  <button class="btn btn-primary" (click)="addShelf()">Add Shelf +</button>
+  <button class="btn btn-primary mb-3" (click)="addShelf()">Add Shelf +</button>
   <table class="table table-bordered table-hover">
     <thead>
       <tr>
