--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -36,8 +36,14 @@
             <span
               class="icon delete material-symbols-outlined"
               (click)="delete(user.email)"
-              >delete</span
             >
+              person_remove
+            </span>
+            <!-- <span
+              class="icon delete material-symbols-outlined"
+              
+              >delete</span
+            > -->
           </div>
         </td>
       </tr>
