--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">Navbar</a>
+    <a class="navbar-brand">LOGO</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,7 +15,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page">Home</a>
+          <a
+            routerLinkActive="active"
+            [routerLink]="['./home']"
+            [relativeTo]="route"
+            class="nav-link"
+            aria-current="page"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
           <a
@@ -35,6 +42,7 @@
             >ITEM</a
           >
         </li>
+        @switch (role) { @case ('admin') {
         <li class="nav-item">
           <a
             routerLinkActive="active"
@@ -44,12 +52,9 @@
             >EMPLOYEES</a
           >
         </li>
+        } }
       </ul>
     </div>
   </div>
 </nav>
 <router-outlet />
-
-<!-- <div class="d-flex justify-content-center align-items-center ">
-  <h2>WELCOME</h2>
-</div> -->
