--- a/src/app/core/component/menu/menu.component.scss
+++ b/src/app/core/component/menu/menu.component.scss
@@ -4,11 +4,11 @@
     padding: 0.8em;
   }
   .navbar {
-    border-bottom: 5px solid #3a0ca3;
+    border-bottom: 5px solid #1B3856;
   }
   
   .navbar .navbar-nav .nav-link.active {
-    background-color: #3a0ca3;
+    background-color: #1B3856;
     color: #fff;
   }
   @media screen and (min-width: 992px) {
