--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,34 +1,19 @@
-<div class="card" style="width: 18rem">
-  <img src="..." class="card-img-top" alt="..." />
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
-    </p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="d-flex">
+  @for (report of reports; track $index) { @if(report.active == true){
+  <div class="card" style="width: 18rem">
+    <div class="card-body">
+      <div class="m-2">
+        <h5 class="card-title">{{ report.itemName | uppercase }}</h5>
+        <p class="card-text">
+          {{ report.description }}
+        </p>
+        <hr />
+        <p class="card-text">{{ report.userName }} {{ report.userLastName }}</p>
+        <hr />
+        <p class="card-text">{{ report.userEmail }}</p>
+        <hr />
+      </div>
+    </div>
   </div>
-</div>
-
-<div class="card" style="width: 18rem">
-  <img src="..." class="card-img-top" alt="..." />
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
-    </p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem">
-  <img src="..." class="card-img-top" alt="..." />
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
-    </p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
+  }}
 </div>
