--- a/src/app/modules/home/home/home.component.scss
+++ b/src/app/modules/home/home/home.component.scss
@@ -1,3 +1,21 @@
 .card{
     margin: 3rem;
+    display: grid;
+}
+.card-title{
+    background-color: darkslategray;
+    color :white;
+    padding:.5rem 1rem ;
+    border-radius: 6px;
+    text-align: center;
+}
+.card-text{
+    margin :0
+}
+
+hr {
+    height: 2px;
+    background-color: darkslategray;
+    border-color: darkslategray;
+    margin-top :0;
 }
