report page duzenleme

--- a/src/app/core/component/menu/menu.component.scss
+++ b/src/app/core/component/menu/menu.component.scss
@@ -21,3 +21,15 @@
       padding-top: 0.5em;
     }
   }
+
+  // dropdown ▼ kaldırma
+  .dropdown-toggle{
+    &:after{
+      content: none;
+    }
+  }
+
+  .dropstart .dropdown-toggle::before{
+    content: none;
+}
+
