--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -12,8 +12,8 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse d-flex" id="navbarNav">
+      <ul class="navbar-nav w-100">
         <li class="nav-item">
           <a
             routerLinkActive="active"
@@ -52,7 +52,7 @@
             >REPORT</a
           >
         </li>
-        } @else if(role ==='admin') {
+        } @else if(role =='admin') {
         <li class="nav-item">
           <a
             routerLinkActive="active"
@@ -63,9 +63,37 @@
           >
         </li>
         }
-        <button (click)="logout()">LogOut</button>
-        <button (click)="test()"></button>
       </ul>
+      <!-- justify-content-end align-items-center -->
+      <div class="dropdown dropstart">
+        <button
+          class="btn btn-success rounded-circle dropdown-toggle"
+          data-toggle="dropdown"
+          type="button"
+          data-bs-toggle="dropdown"
+        >
+          F
+        </button>
+        <ul class="dropdown-menu" style="background-color: #1c2841">
+          <li>
+            <a
+              class="dropdown-item text-light"
+              routerLinkActive="active"
+              [routerLink]="['./profile']"
+              [relativeTo]="route"
+              >Profile</a
+            >
+          </li>
+          <li class="mt-1">
+            <a
+              class="dropdown-item text-danger"
+              (click)="logout()"
+              style="cursor: pointer"
+              >Logout</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
