--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -72,7 +72,7 @@
           type="button"
           data-bs-toggle="dropdown"
         >
-          F
+          {{ getChar() | uppercase }}
         </button>
         <ul class="dropdown-menu" style="background-color: #1c2841">
           <li>
