--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="display">
   @for (report of reports; track $index) { @if(report.active == true){
   <div class="card" style="width: 18rem">
     <div class="card-body">
@@ -12,6 +12,16 @@
         <hr />
         <p class="card-text">{{ report.userEmail }}</p>
         <hr />
+        <!-- <div
+          class="progress"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-success" style="width: 25%">25%</div>
+        </div> -->
       </div>
     </div>
   </div>
