--- a/src/app/modules/shelf/shelf/shelf.component.scss
+++ b/src/app/modules/shelf/shelf/shelf.component.scss
@@ -1,7 +1,9 @@
 $edit-color: #E9C874;
 $delete-color: #A34343;
+$disabled-color :#808080 ;
+$blue : #0d6efd;
 .title-box {
-    padding: 3rem 1.5rem 2rem;
+    padding: 2rem 1.5rem 0 1.5rem;
     text-align: center;
 }
 
@@ -26,5 +28,20 @@ $delete-color: #A34343;
   &:hover{
     color: rgba($delete-color, 0.7);
     transform: scale(1.2);
+  }
+}
+
+.disable{
+  pointer-events: none;
+  color: rgba($disabled-color, 0.6);
+  }
+
+.searchBox{
+  border: 1px solid $blue;
+  border-radius: 4px;
+  padding: 0.5rem;
+  &:focus{
+    outline: none;
+    box-shadow:0 0px 2px 1px rgba(0, 0, 0, 0.8) ;
   }
 }
